--- a/functions/_isEqual.html
+++ b/functions/_isEqual.html
@@ -26,7 +26,7 @@
         </ul>
       </nav>
     </header>
-    <section class="head">
+    <main>
       <h1>_isEqual()</h1>
       <nav class="fn-navbar">
         <ul>
@@ -41,71 +41,68 @@
           </li>
         </ul>
       </nav>
-    </section>
-    <main>
-      <aside class="sidebar" id="others">
-        <h3>Métodos</h3>
-        <ul>
-          <li class="sidebar-item"><a href="_forEach.html" target="_blank" rel="noopener noreferrer">_forEach</a></li>
-          <li class="sidebar-item"><a href="_some.html" target="_blank" rel="noopener noreferrer">_some</a></li>
-          <li class="sidebar-item"><a href="_every.html" target="_blank" rel="noopener noreferrer">_every</a></li>
-          <li class="sidebar-item"><a href="_find.html" target="_blank" rel="noopener noreferrer">_find</a></li>
-          <li class="sidebar-item"><a href="_every.html" target="_blank" rel="noopener noreferrer">_every</a></li>
-          <li class="sidebar-item"><a href="_find.html" target="_blank" rel="noopener noreferrer">_find</a></li>
-          <li class="sidebar-item"><a href="_includes" target="_blank" rel="noopener noreferrer">_includes</a></li>
-          <li class="sidebar-item"><a href="_map" target="_blank" rel="noopener noreferrer">_map</a></li>
-          <li class="sidebar-item"><a href="_filter" target="_blank" rel="noopener noreferrer">_filter</a></li>
-          <li class="sidebar-item"><a href="_reduce" target="_blank" rel="noopener noreferrer">_reduce</a></li>
-          <li class="sidebar-item"><a href="_indexOf" target="_blank" rel="noopener noreferrer">_indexOf</a></li>
-          <li class="sidebar-item">
-            <a href="_indexOfRecursive" target="_blank" rel="noopener noreferrer">_indexOfRecursive</a>
-          </li>
-          <li class="sidebar-item"><a href="_intersection" target="_blank" rel="noopener noreferrer">_intersection</a></li>
-          <li class="sidebar-item"><a href="_union" target="_blank" rel="noopener noreferrer">_union</a></li>
-          <li class="sidebar-item"><a href="_sum" target="_blank" rel="noopener noreferrer">_sum</a></li>
-          <li class="sidebar-item"><a href="_min" target="_blank" rel="noopener noreferrer">_min</a></li>
-          <li class="sidebar-item"><a href="_max" target="_blank" rel="noopener noreferrer">_max</a></li>
-          <li class="sidebar-item"><a href="_findIndex" target="_blank" rel="noopener noreferrer">_findIndex</a></li>
-          <li class="sidebar-item"><a href="_lastIndexOf" target="_blank" rel="noopener noreferrer">_lastIndexOf</a></li>
-          <li class="sidebar-item"><a href="_concat" target="_blank" rel="noopener noreferrer">_concat</a></li>
-        </ul>
-      </aside>
-      <section class="content">
-        <article id="syntax">
-          <p>
-            El método <code>_isEqual()</code> recibe dos arrays como parámetro y retorna <code>true</code> si son iguales, es
-            decir, si tienen los mismos elementos y en el mismo orden, o <code>false</code> en caso contrario.
-          </p>
-          <h3>Sintaxis</h3>
-          <p class="syntaxbox">_isEqual(<em>array1</em>, <em>array2</em>)</p>
-          <h3>Parámetros</h3>
-          <dl>
-            <dt>
-              <code class="code-params">array</code>
-            </dt>
-            <dd class="description">
-              Son los arrays que van a ser comparados.
-            </dd>
-          </dl>
-          <h3>Valor de retorno</h3>
-          <p class="description">Devuelve <code>true</code> si los arrays son iguales o <code>false</code> si no lo son.</p>
-        </article>
-        <article id="examples">
-          <h3>Ejemplo</h3>
-          <h4>Comparación de dos arrays</h4>
-          <pre>
+      <div class="container">
+        <aside class="sidebar" id="others">
+          <h3>Métodos</h3>
+          <ul>
+            <li class="sidebar-item"><a href="_forEach.html">_forEach</a></li>
+            <li class="sidebar-item"><a href="_some.html">_some</a></li>
+            <li class="sidebar-item"><a href="_every.html">_every</a></li>
+            <li class="sidebar-item"><a href="_find.html">_find</a></li>
+            <li class="sidebar-item"><a href="_every.html">_every</a></li>
+            <li class="sidebar-item"><a href="_find.html">_find</a></li>
+            <li class="sidebar-item"><a href="_includes">_includes</a></li>
+            <li class="sidebar-item"><a href="_map">_map</a></li>
+            <li class="sidebar-item"><a href="_filter">_filter</a></li>
+            <li class="sidebar-item"><a href="_reduce">_reduce</a></li>
+            <li class="sidebar-item"><a href="_indexOf">_indexOf</a></li>
+            <li class="sidebar-item"><a href="_indexOfRecursive">_indexOfRecursive</a></li>
+            <li class="sidebar-item"><a href="_intersection">_intersection</a></li>
+            <li class="sidebar-item"><a href="_union">_union</a></li>
+            <li class="sidebar-item"><a href="_sum">_sum</a></li>
+            <li class="sidebar-item"><a href="_min">_min</a></li>
+            <li class="sidebar-item"><a href="_max">_max</a></li>
+            <li class="sidebar-item"><a href="_findIndex">_findIndex</a></li>
+            <li class="sidebar-item"><a href="_lastIndexOf">_lastIndexOf</a></li>
+            <li class="sidebar-item"><a href="_concat">_concat</a></li>
+          </ul>
+        </aside>
+        <section class="content">
+          <article id="syntax">
+            <p>El método <code>areEqual()</code> recibe dos arrays como parámetro y retorna <code>true</code> si son iguales, es decir, si tienen los mismos elementos y en el mismo orden, o <code>false</code> en caso contrario.</p>
+            <h3>Sintaxis</h3>
+            <p class="syntaxbox">_isEqual(<em>array1</em>, <em>array2</em>)</p>
+            <h3>Parámetros</h3>
+            <dl>
+              <dt>
+                <code class="code-params">array</code>
+              </dt>
+              <dd class="description">
+                Son los arrays que van a ser comparados.
+              </dd>
+            </dl>
+            <h3>Valor de retorno</h3>
+            <p class="description">
+              Devuelve <code>true</code> si los arrays son iguales o <code>false</code> si no lo son.
+            </p>
+          </article>
+          <article id="examples">
+            <h3>Ejemplo</h3>
+            <h4>Comparación de dos arrays</h4>
+            <pre>
             <code class="javascript">
 const animales = ['perro', 'gato', 'canario'];
 
 const mascotas = ['perro', 'gato', 'canario'];
 
 areEqual(animales, mascotas);
-          
+              
 >> true
             </code>
           </pre>
-        </article>
-      </section>
+          </article>
+        </section>
+      </div>
     </main>
     <footer>
       <section>
