Corrige links a métodos

--- a/functions/_concat.html
+++ b/functions/_concat.html
@@ -45,10 +45,8 @@
         <aside class="sidebar" id="others">
           <h3>Métodos</h3>
           <ul>
-            <li class="sidebar-item"><a href="_concat">_forEach</a></li>
+            <li class="sidebar-item"><a href="_forEach">_forEach</a></li>
             <li class="sidebar-item"><a href="_some.html">_some</a></li>
-            <li class="sidebar-item"><a href="_every.html">_every</a></li>
-            <li class="sidebar-item"><a href="_find.html">_find</a></li>
             <li class="sidebar-item"><a href="_every.html">_every</a></li>
             <li class="sidebar-item"><a href="_find.html">_find</a></li>
             <li class="sidebar-item"><a href="_includes">_includes</a></li>
