--- a/functions/_intersection.html
+++ b/functions/_intersection.html
@@ -26,7 +26,7 @@
         </ul>
       </nav>
     </header>
-    <section class="head">
+    <main>
       <h1>_intersection()</h1>
       <nav class="fn-navbar">
         <ul>
@@ -41,70 +41,68 @@
           </li>
         </ul>
       </nav>
-    </section>
-    <main>
-      <aside class="sidebar" id="others">
-        <h3>Métodos</h3>
-        <ul>
-          <li class="sidebar-item"><a href="_forEach.html" target="_blank" rel="noopener noreferrer">_forEach</a></li>
-          <li class="sidebar-item"><a href="_some.html" target="_blank" rel="noopener noreferrer">_some</a></li>
-          <li class="sidebar-item"><a href="_every.html" target="_blank" rel="noopener noreferrer">_every</a></li>
-          <li class="sidebar-item"><a href="_find.html" target="_blank" rel="noopener noreferrer">_find</a></li>
-          <li class="sidebar-item"><a href="_every.html" target="_blank" rel="noopener noreferrer">_every</a></li>
-          <li class="sidebar-item"><a href="_find.html" target="_blank" rel="noopener noreferrer">_find</a></li>
-          <li class="sidebar-item"><a href="_includes" target="_blank" rel="noopener noreferrer">_includes</a></li>
-          <li class="sidebar-item"><a href="_map" target="_blank" rel="noopener noreferrer">_map</a></li>
-          <li class="sidebar-item"><a href="_filter" target="_blank" rel="noopener noreferrer">_filter</a></li>
-          <li class="sidebar-item"><a href="_reduce" target="_blank" rel="noopener noreferrer">_reduce</a></li>
-          <li class="sidebar-item"><a href="_indexOf" target="_blank" rel="noopener noreferrer">_indexOf</a></li>
-          <li class="sidebar-item"><a href="_indexOfRecursive" target="_blank" rel="noopener noreferrer">_indexOfRecursive</a></li>
-          <li class="sidebar-item"><a href="_intersection" target="_blank" rel="noopener noreferrer">_intersection</a></li>
-          <li class="sidebar-item"><a href="_union" target="_blank" rel="noopener noreferrer">_union</a></li>
-          <li class="sidebar-item"><a href="_sum" target="_blank" rel="noopener noreferrer">_sum</a></li>
-          <li class="sidebar-item"><a href="_min" target="_blank" rel="noopener noreferrer">_min</a></li>
-          <li class="sidebar-item"><a href="_max" target="_blank" rel="noopener noreferrer">_max</a></li>
-          <li class="sidebar-item"><a href="_findIndex" target="_blank" rel="noopener noreferrer">_findIndex</a></li>
-          <li class="sidebar-item"><a href="_lastIndexOf" target="_blank" rel="noopener noreferrer">_lastIndexOf</a></li>
-          <li class="sidebar-item"><a href="_concat" target="_blank" rel="noopener noreferrer">_concat</a></li>
-          <li class="sidebar-item"><a href="_isEqual" target="_blank" rel="noopener noreferrer">_isEqual</a></li>
-        </ul>
-      </aside>
-      <section class="content">
-        <article id="syntax">
-          <p>
-            A patir de dos arrays, el método <code>_intersection()</code> retorna un nuevo array con la intersección de los valores de
+      <div class="container">
+        <aside class="sidebar" id="others">
+          <h3>Métodos</h3>
+          <ul>
+            <li class="sidebar-item"><a href="_forEach.html">_forEach</a></li>
+            <li class="sidebar-item"><a href="_some.html">_some</a></li>
+            <li class="sidebar-item"><a href="_every.html">_every</a></li>
+            <li class="sidebar-item"><a href="_find.html">_find</a></li>
+            <li class="sidebar-item"><a href="_includes">_includes</a></li>
+            <li class="sidebar-item"><a href="_map">_map</a></li>
+            <li class="sidebar-item"><a href="_filter">_filter</a></li>
+            <li class="sidebar-item"><a href="_reduce">_reduce</a></li>
+            <li class="sidebar-item"><a href="_indexOf">_indexOf</a></li>
+            <li class="sidebar-item"><a href="_indexOfRecursive">_indexOfRecursive</a></li>
+            <li class="sidebar-item"><a href="_isEqual">_isEqual</a></li>
+            <li class="sidebar-item"><a href="_union">_union</a></li>
+            <li class="sidebar-item"><a href="_sum">_sum</a></li>
+            <li class="sidebar-item"><a href="_min">_min</a></li>
+            <li class="sidebar-item"><a href="_max">_max</a></li>
+            <li class="sidebar-item"><a href="_findIndex">_findIndex</a></li>
+            <li class="sidebar-item"><a href="_lastIndexOf">_lastIndexOf</a></li>
+            <li class="sidebar-item"><a href="_concat">_concat</a></li>
+          </ul>
+        </aside>
+        <section class="content">
+          <article id="syntax">
+            <p>A patir de dos arrays, el método <code>_intersection()</code> retorna un nuevo array con la intersección de los valores de
             ambos, sin repeticiones y preservando el orden de los elementos, comenzando desde el primer elemento del primer array
-            pasado por parámetro.
-          </p>
-          <h3>Sintaxis</h3>
-          <p class="syntaxbox">_intersection(<em>arrayOne</em>, <em>arrayTwo</em>)</p>
-          <h3>Parámetros</h3>
-          <dl>
-            <dt>
-              <code class="code-params">array</code>
-            </dt>
-            <dd class="description">
-              Los arrays que se unirán para conformar el nuevo array a devolver.
-            </dd>
-          </dl>
-          <h3>Valor de retorno</h3>
-          <p class="description">
-            Devuelve un nuevo array con la intersección.
-          </p>
-        </article>
-        <article id="examples">
-          <h3>Ejemplo</h3>
-          <h4>Intersectar dos arrays de números sin repeticiones</h4>
-          <pre>
+            pasado por parámetro.</p>
+            <h3>Sintaxis</h3>
+            <p class="syntaxbox">_intersection(<em>arrayOne</em>, <em>arrayTwo</em>)</p>
+            <h3>Parámetros</h3>
+            <dl>
+              <dt>
+                <code class="code-params">array</code>
+              </dt>
+              <dd class="description">
+              Los arrays que serán comparados.
+              </dd>
+            </dl>
+            <h3>Valor de retorno</h3>
+            <p class="description">
+              Devuelve un nuevo array con la intersección.
+            </p>
+          </article>
+          <article id="examples">
+            <h3>Ejemplo</h3>
+            <h4>Intersectar dos arrays de números sin repeticiones</h4>
+            <pre>
             <code class="javascript">
 const firstArray = [1, 2, 3, 5];
+
 const secondArray = [2, 4, 5, 7];
-fakeIntersection(firstArray, secondArray);
+
+_intersection(firstArray, secondArray);
+
 >> [2, 5]
             </code>
           </pre>
-        </article>
-      </section>
+          </article>
+        </section>
+      </div>
     </main>
     <footer>
       <section>
