--- a/functions/_min.html
+++ b/functions/_min.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>_mind() | MDN Clone</title>
+    <title>_min() | MDN Clone</title>
     <link rel="stylesheet" type="text/css" media="screen" href="../css/templateStyle.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../css/functionStyle.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/styles/atom-one-light.min.css" />
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/highlight.min.js"></script>
   </head>
-
   <body>
-    <!-- header -->
     <header>
       <a class="logo" href="#">
         <img src="../img/logo_v2_negro.png" alt="Logo fakeMdn" title="Logo" />
@@ -28,7 +26,7 @@
         </ul>
       </nav>
     </header>
-    <section class="head">
+    <main>
       <h1>_min()</h1>
       <nav class="fn-navbar">
         <ul>
@@ -43,80 +41,65 @@
           </li>
         </ul>
       </nav>
-    </section><main>
-      <aside class="sidebar" id="others">
-        <h3>Métodos</h3>
-        <ul>
-          <li class="sidebar-item"><a href="_forEach.html" target="_blank" rel="noopener noreferrer">_forEach</a></li>
-          <li class="sidebar-item"><a href="_some.html" target="_blank" rel="noopener noreferrer">_some</a></li>
-          <li class="sidebar-item"><a href="_every.html" target="_blank" rel="noopener noreferrer">_every</a></li>
-          <li class="sidebar-item"><a href="_find.html" target="_blank" rel="noopener noreferrer">_find</a></li>
-          <li class="sidebar-item"><a href="_every.html" target="_blank" rel="noopener noreferrer">_every</a></li>
-          <!-- <li class="sidebar-item"><a href="_find.html" target="_blank" rel="noopener noreferrer">_find</a></li> -->
-          <li class="sidebar-item"><a href="_includes.html" target="_blank" rel="noopener noreferrer">_includes</a></li>
-          <li class="sidebar-item"><a href="_map.html" target="_blank" rel="noopener noreferrer">_map</a></li>
-          <li class="sidebar-item"><a href="_filter.hmtl" target="_blank" rel="noopener noreferrer">_filter</a></li>
-          <li class="sidebar-item"><a href="_reduce.hmtl" target="_blank" rel="noopener noreferrer">_reduce</a></li>
-          <li class="sidebar-item"><a href="_indexOf.hmtl" target="_blank" rel="noopener noreferrer">_indexOf</a></li>
-          <li class="sidebar-item">
-            <a href="_indexOfRecursive.hmtl" target="_blank" rel="noopener noreferrer">_indexOfRecursive</a>
-          </li>
-          <li class="sidebar-item"><a href="_intersection.hmtl" target="_blank" rel="noopener noreferrer">_intersection</a></li>
-          <li class="sidebar-item"><a href="_union.hmtl" target="_blank" rel="noopener noreferrer">_union</a></li>
-          <li class="sidebar-item"><a href="_sum.hmtl" target="_blank" rel="noopener noreferrer">_sum</a></li>
-          <!-- <li class="sidebar-item"><a href="_min.hmtl" target="_blank" rel="noopener noreferrer">_min</a></li> -->
-          <li class="sidebar-item"><a href="_max.hmtl" target="_blank" rel="noopener noreferrer">_max</a></li>
-          <li class="sidebar-item"><a href="_findIndex.hmtl" target="_blank" rel="noopener noreferrer">_findIndex</a></li>
-          <li class="sidebar-item"><a href="_lastIndexOf.hmtl" target="_blank" rel="noopener noreferrer">_lastIndexOf</a></li>
-          <li class="sidebar-item"><a href="_concat.hmtl" target="_blank" rel="noopener noreferrer">_concat</a></li>
-          <li class="sidebar-item"><a href="_isEqual.html" target="_blank" rel="noopener noreferrer">_isEqual</a></li>
-        </ul>
-      </aside>
-      <section class="content">
-        <article id="syntax">
-          <p>El método <code>_min()</code>devuelve el valor mínimo de un array. Los elementos del array pueden ser
+      <div class="container">
+        <aside class="sidebar" id="others">
+          <h3>Métodos</h3>
+          <ul>
+            <li class="sidebar-item"><a href="_forEach.html">_forEach</a></li>
+            <li class="sidebar-item"><a href="_some.html">_some</a></li>
+            <li class="sidebar-item"><a href="_every.html">_every</a></li>
+            <li class="sidebar-item"><a href="_find.html">_find</a></li>
+            <li class="sidebar-item"><a href="_includes">_includes</a></li>
+            <li class="sidebar-item"><a href="_map">_map</a></li>
+            <li class="sidebar-item"><a href="_filter">_filter</a></li>
+            <li class="sidebar-item"><a href="_reduce">_reduce</a></li>
+            <li class="sidebar-item"><a href="_indexOf">_indexOf</a></li>
+            <li class="sidebar-item"><a href="_indexOfRecursive">_indexOfRecursive</a></li>
+            <li class="sidebar-item"><a href="_isEqual">_isEqual</a></li>
+            <li class="sidebar-item"><a href="_union">_union</a></li>
+            <li class="sidebar-item"><a href="_sum">_sum</a></li>
+            <li class="sidebar-item"><a href="_max">_max</a></li>
+            <li class="sidebar-item"><a href="_intersection">_intersection</a></li>
+            <li class="sidebar-item"><a href="_findIndex">_findIndex</a></li>
+            <li class="sidebar-item"><a href="_lastIndexOf">_lastIndexOf</a></li>
+            <li class="sidebar-item"><a href="_concat">_concat</a></li>
+          </ul>
+        </aside>
+        <section class="content">
+          <article id="syntax">
+            <p>El método <code>_min()</code>devuelve el valor mínimo de un array. Los elementos del array pueden ser
             <code>number</code> o <code>string</code>.</p>
-          <h3>Sintaxis</h3>
-          <p class="syntaxbox">_min(<em>array</em>)</p>
-          <h3>Parámetros</h3>
-          <dl>
-            <dt>
-              <code class="code-params">array</code>
-            </dt>
-            <dd class="description">
-                El array de cuyos elementos se devolverá el mínimo.
-            </dd>
-          </dl>
-          <h3>Valor de retorno</h3>
-          <p class="description">
-              Devuelve un <code>number</code> o un <code>string</code>, o <code>undefined</code> en caso de que el array
-              esté vacío.
-          </p>
-        </article>
-        <article id="examples">
-          <h3>Ejemplo</h3>
-          <h4>Averiguar el valor más bajo de un array de números</h4>
-          <pre>
+            <h3>Sintaxis</h3>
+            <p class="syntaxbox">_min(<em>array</em>)</p>
+            <h3>Parámetros</h3>
+            <dl>
+              <dt>
+                <code class="code-params">array</code>
+              </dt>
+              <dd class="description">
+              El array de cuyos elementos se devolverá el mínimo.
+              </dd>
+            </dl>
+            <h3>Valor de retorno</h3>
+            <p class="description">
+              Devuelve un <code>number</code> o un <code>string</code>, o <code>undefined</code> en caso de que el array esté vacío.
+            </p>
+          </article>
+          <article id="examples">
+            <h3>Ejemplo</h3>
+            <h4>Averiguar el valor más bajo de un array de números</h4>
+            <pre>
             <code class="javascript">
 const numeros= [1, 4, 9, 88, -44, 109, 8];
 
-fakeArrayMin(numeros);
+_min(numeros);
                           
->> -44
+>> -44            
             </code>
           </pre>
-        <h4>Averiguar el valor más bajo de un array de números y strings</h4>
-        <pre>
-            <code class="javascript">
-const lista = ['a', '1', 'j'];
-
-fakeArrayMin(lista);
-
->>> 1
-            </code>
-          </pre>
-        </article>
-      </section>
+          </article>
+        </section>
+      </div>
     </main>
     <footer>
       <section>
