Corrige link a _union

--- a/functions/_sum.html
+++ b/functions/_sum.html
@@ -58,7 +58,7 @@
             <li class="sidebar-item"><a href="_isEqual">_isEqual</a></li>
             <li class="sidebar-item"><a href="_max">_max</a></li>
             <li class="sidebar-item"><a href="_min.html">_min</a></li>
-            <li class="sidebar-item"><a href="_sum">_union</a></li>
+            <li class="sidebar-item"><a href="_union">_union</a></li>
             <li class="sidebar-item"><a href="_intersection">_intersection</a></li>
             <li class="sidebar-item"><a href="_findIndex">_findIndex</a></li>
             <li class="sidebar-item"><a href="_lastIndexOf">_lastIndexOf</a></li>
