--- a/functions/_lastIndexOf.html
+++ b/functions/_lastIndexOf.html
@@ -67,8 +67,7 @@
         </aside>
         <section class="content">
           <article id="syntax">
-            <p>El método <code>_lastIndexOf()</code> devuelve el último índice en el que un elemento puede encontrarse, o devuelve -1 si el elemento no se encontrara
-        </section></p>
+            <p>El método <code>_lastIndexOf()</code> devuelve el último índice en el que un elemento puede encontrarse, o devuelve -1 si el elemento no se encontrara.</p>
             <h3>Sintaxis</h3>
             <p class="syntaxbox">_map(<em>array</em>, <em>element</em>)</p>
             <h3>Parámetros</h3>
