Corrige texto de la descripción

--- a/functions/_indexOf.html
+++ b/functions/_indexOf.html
@@ -67,7 +67,7 @@
         </aside>
         <section class="content">
           <article id="syntax">
-            <p>El método <code>_indexOf()</code> devuelve el primer índice en el que se puede encontrar un elemento dado en el array, o devuelve <code>-1</code> si el elemento no está presente. Además, es implementado utilizando recursividad.
+            <p>El método <code>_indexOf()</code> devuelve el primer índice en el que se puede encontrar un elemento dado en el array, o devuelve <code>-1</code> si el elemento no está presente.
             </p>
             <h3>Sintaxis</h3>
             <p class="syntaxbox">_indexOfRecursive(<em>array</em>, <em>element</em>)</p>
