Agrega extensión y atributos target y rel a links

--- a/functions/_forEach.html
+++ b/functions/_forEach.html
@@ -45,24 +45,24 @@
         <aside class="sidebar" id="others">
           <h3>Métodos</h3>
           <ul>
-            <li class="sidebar-item"><a href="_some.html">_some</a></li>
-            <li class="sidebar-item"><a href="_every.html">_every</a></li>
-            <li class="sidebar-item"><a href="_find.html">_find</a></li>
-            <li class="sidebar-item"><a href="_includes">_includes</a></li>
-            <li class="sidebar-item"><a href="_map">_map</a></li>
-            <li class="sidebar-item"><a href="_filter">_filter</a></li>
-            <li class="sidebar-item"><a href="_reduce">_reduce</a></li>
-            <li class="sidebar-item"><a href="_indexOf">_indexOf</a></li>
-            <li class="sidebar-item"><a href="_indexOfRecursive">_indexOfRecursive</a></li>
-            <li class="sidebar-item"><a href="_intersection">_intersection</a></li>
-            <li class="sidebar-item"><a href="_union">_union</a></li>
-            <li class="sidebar-item"><a href="_sum">_sum</a></li>
-            <li class="sidebar-item"><a href="_min">_min</a></li>
-            <li class="sidebar-item"><a href="_max">_max</a></li>
-            <li class="sidebar-item"><a href="_findIndex">_findIndex</a></li>
-            <li class="sidebar-item"><a href="_lastIndexOf">_lastIndexOf</a></li>
-            <li class="sidebar-item"><a href="_concat">_concat</a></li>
-            <li class="sidebar-item"><a href="_isEqual.html">_isEqual</a></li>
+            <li class="sidebar-item"><a href="_some.html" target="_blank" rel="noopener noreferrer">_some</a></li>
+            <li class="sidebar-item"><a href="_every.html" target="_blank" rel="noopener noreferrer">_every</a></li>
+            <li class="sidebar-item"><a href="_find.html" target="_blank" rel="noopener noreferrer">_find</a></li>
+            <li class="sidebar-item"><a href="_includes.html" target="_blank" rel="noopener noreferrer">_includes</a></li>
+            <li class="sidebar-item"><a href="_map.html" target="_blank" rel="noopener noreferrer">_map</a></li>
+            <li class="sidebar-item"><a href="_filter.html" target="_blank" rel="noopener noreferrer">_filter</a></li>
+            <li class="sidebar-item"><a href="_reduce.html" target="_blank" rel="noopener noreferrer">_reduce</a></li>
+            <li class="sidebar-item"><a href="_indexOf.html" target="_blank" rel="noopener noreferrer">_indexOf</a></li>
+            <li class="sidebar-item"><a href="_indexOfRecursive.html" target="_blank" rel="noopener noreferrer">_indexOfRecursive</a></li>
+            <li class="sidebar-item"><a href="_intersection.html" target="_blank" rel="noopener noreferrer">_intersection</a></li>
+            <li class="sidebar-item"><a href="_union.html" target="_blank" rel="noopener noreferrer">_union</a></li>
+            <li class="sidebar-item"><a href="_sum.html" target="_blank" rel="noopener noreferrer">_sum</a></li>
+            <li class="sidebar-item"><a href="_min.html" target="_blank" rel="noopener noreferrer">_min</a></li>
+            <li class="sidebar-item"><a href="_max.html" target="_blank" rel="noopener noreferrer">_max</a></li>
+            <li class="sidebar-item"><a href="_findIndex.html" target="_blank" rel="noopener noreferrer">_findIndex</a></li>
+            <li class="sidebar-item"><a href="_lastIndexOf.html" target="_blank" rel="noopener noreferrer">_lastIndexOf</a></li>
+            <li class="sidebar-item"><a href="_concat.html" target="_blank" rel="noopener noreferrer">_concat</a></li>
+            <li class="sidebar-item"><a href="_isEqual.html" target="_blank" rel="noopener noreferrer">_isEqual</a></li>
           </ul>
         </aside>
         <section class="content">
