--- a/index.html
+++ b/index.html
@@ -33,23 +33,21 @@
               <li class="sidebar-item"><a href="functions/_some.html" target="_blank" rel="noopener noreferrer">_some</a></li>
               <li class="sidebar-item"><a href="functions/_every.html" target="_blank" rel="noopener noreferrer">_every</a></li>
               <li class="sidebar-item"><a href="functions/_find.html" target="_blank" rel="noopener noreferrer">_find</a></li>
-              <li class="sidebar-item"><a href="functions/_every.html" target="_blank" rel="noopener noreferrer">_every</a></li>
-              <li class="sidebar-item"><a href="functions/_find.html" target="_blank" rel="noopener noreferrer">_find</a></li>
               <li class="sidebar-item"><a href="functions/_includes" target="_blank" rel="noopener noreferrer">_includes</a></i>
-              <li class="sidebar-item"><a href="functions/_map" target="_blank" rel="noopener noreferrer">_map</a></li>
-              <li class="sidebar-item"><a href="functions/_filter" target="_blank" rel="noopener noreferrer">_filter</a></li>
-              <li class="sidebar-item"><a href="functions/_reduce" target="_blank" rel="noopener noreferrer">_reduce</a></li>
-              <li class="sidebar-item"><a href="functions/_indexOf" target="_blank" rel="noopener noreferrer">_indexOf</a></li>
-              <li class="sidebar-item"><a href="functions/_indexOfRecursive" target="_blank" rel="noopener oreferrer">_indexOfRecursive</a></li>
-              <li class="sidebar-item"><a href="functions/_intersection" target="_blank" rel="noopener oreferrer">_intersection</a></li>
-              <li class="sidebar-item"><a href="functions/_union" target="_blank" rel="noopener noreferrer">_union</a></li>
-              <li class="sidebar-item"><a href="functions/_sum" target="_blank" rel="noopener noreferrer">_sum</a></li>
-              <li class="sidebar-item"><a href="functions/_min" target="_blank" rel="noopener noreferrer">_min</a></li>
-              <li class="sidebar-item"><a href="functions/_max" target="_blank" rel="noopener noreferrer">_max</a></li>
-              <li class="sidebar-item"><a href="functions/_findIndex" target="_blank" rel="noopener noreferrer">_findIndex</a></i>
-              <li class="sidebar-item"><a href="functions/_lastIndexOf" target="_blank" rel="noopener noreferrer">_lastIndexOf</></li>
-              <li class="sidebar-item"><a href="functions/_concat" target="_blank" rel="noopener noreferrer">_concat</a></li>
-              <li class="sidebar-item"><a href="functions/_isEqual" target="_blank" rel="noopener noreferrer">_isEqual</a></li>
+              <li class="sidebar-item"><a href="functions/_map.html" target="_blank" rel="noopener noreferrer">_map</a></li>
+              <li class="sidebar-item"><a href="functions/_filter.html" target="_blank" rel="noopener noreferrer">_filter</a></li>
+              <li class="sidebar-item"><a href="functions/_reduce.html" target="_blank" rel="noopener noreferrer">_reduce</a></li>
+              <li class="sidebar-item"><a href="functions/_indexOf.html" target="_blank" rel="noopener noreferrer">_indexOf</a></li>
+              <li class="sidebar-item"><a href="functions/_indexOfRecursive.html" target="_blank" rel="noopener oreferrer">_indexOfRecursive</a></li>
+              <li class="sidebar-item"><a href="functions/_intersection.html" target="_blank" rel="noopener oreferrer">_intersection</a></li>
+              <li class="sidebar-item"><a href="functions/_union.html" target="_blank" rel="noopener noreferrer">_union</a></li>
+              <li class="sidebar-item"><a href="functions/_sum.html" target="_blank" rel="noopener noreferrer">_sum</a></li>
+              <li class="sidebar-item"><a href="functions/_min.html" target="_blank" rel="noopener noreferrer">_min</a></li>
+              <li class="sidebar-item"><a href="functions/_max.html" target="_blank" rel="noopener noreferrer">_max</a></li>
+              <li class="sidebar-item"><a href="functions/_findIndex.html" target="_blank" rel="noopener noreferrer">_findIndex</a></i>
+              <li class="sidebar-item"><a href="functions/_lastIndexOf.html" target="_blank" rel="noopener noreferrer">_lastIndexOf</a></li>
+              <li class="sidebar-item"><a href="functions/_concat.html" target="_blank" rel="noopener noreferrer">_concat</a></li>
+              <li class="sidebar-item"><a href="functions/_isEqual.html" target="_blank" rel="noopener noreferrer">_isEqual</a></li>
             </ul>
         </aside>
         <section class="content">
