--- a/functions/_isEqual.html
+++ b/functions/_isEqual.html
@@ -54,7 +54,9 @@
             <li class="sidebar-item"><a href="_filter.html" target="_blank" rel="noopener noreferrer">_filter</a></li>
             <li class="sidebar-item"><a href="_reduce.html" target="_blank" rel="noopener noreferrer">_reduce</a></li>
             <li class="sidebar-item"><a href="_indexOf.html" target="_blank" rel="noopener noreferrer">_indexOf</a></li>
-            <li class="sidebar-item"><a href="_indexOfRecursive.html" target="_blank" rel="noopener noreferrer">_indexOfRecursive</a></li>
+            <li class="sidebar-item">
+              <a href="_indexOfRecursive.html" target="_blank" rel="noopener noreferrer">_indexOfRecursive</a>
+            </li>
             <li class="sidebar-item"><a href="_intersection.html" target="_blank" rel="noopener noreferrer">_intersection</a></li>
             <li class="sidebar-item"><a href="_union.html" target="_blank" rel="noopener noreferrer">_union</a></li>
             <li class="sidebar-item"><a href="_sum.html" target="_blank" rel="noopener noreferrer">_sum</a></li>
@@ -67,7 +69,10 @@
         </aside>
         <section class="content">
           <article id="syntax">
-            <p>El método <code>areEqual()</code> recibe dos arrays como parámetro y retorna <code>true</code> si son iguales, es decir, si tienen los mismos elementos y en el mismo orden, o <code>false</code> en caso contrario.</p>
+            <p>
+              El método <code>_isEqual()</code> recibe dos arrays como parámetro y retorna <code>true</code> si son iguales, es
+              decir, si tienen los mismos elementos y en el mismo orden, o <code>false</code> en caso contrario.
+            </p>
             <h3>Sintaxis</h3>
             <p class="syntaxbox">_isEqual(<em>array1</em>, <em>array2</em>)</p>
             <h3>Parámetros</h3>
@@ -80,9 +85,7 @@
               </dd>
             </dl>
             <h3>Valor de retorno</h3>
-            <p class="description">
-              Devuelve <code>true</code> si los arrays son iguales o <code>false</code> si no lo son.
-            </p>
+            <p class="description">Devuelve <code>true</code> si los arrays son iguales o <code>false</code> si no lo son.</p>
           </article>
           <article id="examples">
             <h3>Ejemplo</h3>
@@ -93,7 +96,7 @@ const animales = ['perro', 'gato', 'canario'];
 
 const mascotas = ['perro', 'gato', 'canario'];
 
-areEqual(animales, mascotas);
+_isEqual(animales, mascotas);
               
 >> true
             </code>
