Corrige tag </li>

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <li class="sidebar-item"><a href="functions/_some.html" target="_blank" rel="noopener noreferrer">_some</a></li>
               <li class="sidebar-item"><a href="functions/_every.html" target="_blank" rel="noopener noreferrer">_every</a></li>
               <li class="sidebar-item"><a href="functions/_find.html" target="_blank" rel="noopener noreferrer">_find</a></li>
-              <li class="sidebar-item"><a href="functions/_includes" target="_blank" rel="noopener noreferrer">_includes</a></i>
+              <li class="sidebar-item"><a href="functions/_includes" target="_blank" rel="noopener noreferrer">_includes</a></li>
               <li class="sidebar-item"><a href="functions/_map.html" target="_blank" rel="noopener noreferrer">_map</a></li>
               <li class="sidebar-item"><a href="functions/_filter.html" target="_blank" rel="noopener noreferrer">_filter</a></li>
               <li class="sidebar-item"><a href="functions/_reduce.html" target="_blank" rel="noopener noreferrer">_reduce</a></li>
