Corrige typo en noreferrer

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
               <li class="sidebar-item"><a href="functions/_filter.html" target="_blank" rel="noopener noreferrer">_filter</a></li>
               <li class="sidebar-item"><a href="functions/_reduce.html" target="_blank" rel="noopener noreferrer">_reduce</a></li>
               <li class="sidebar-item"><a href="functions/_indexOf.html" target="_blank" rel="noopener noreferrer">_indexOf</a></li>
-              <li class="sidebar-item"><a href="functions/_indexOfRecursive.html" target="_blank" rel="noopener oreferrer">_indexOfRecursive</a></li>
-              <li class="sidebar-item"><a href="functions/_intersection.html" target="_blank" rel="noopener oreferrer">_intersection</a></li>
+              <li class="sidebar-item"><a href="functions/_indexOfRecursive.html" target="_blank" rel="noopener noreferrer">_indexOfRecursive</a></li>
+              <li class="sidebar-item"><a href="functions/_intersection.html" target="_blank" rel="noopener noreferrer">_intersection</a></li>
               <li class="sidebar-item"><a href="functions/_union.html" target="_blank" rel="noopener noreferrer">_union</a></li>
               <li class="sidebar-item"><a href="functions/_sum.html" target="_blank" rel="noopener noreferrer">_sum</a></li>
               <li class="sidebar-item"><a href="functions/_min.html" target="_blank" rel="noopener noreferrer">_min</a></li>
