Corrige tag </li>

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <li class="sidebar-item"><a href="functions/_sum.html" target="_blank" rel="noopener noreferrer">_sum</a></li>
               <li class="sidebar-item"><a href="functions/_min.html" target="_blank" rel="noopener noreferrer">_min</a></li>
               <li class="sidebar-item"><a href="functions/_max.html" target="_blank" rel="noopener noreferrer">_max</a></li>
-              <li class="sidebar-item"><a href="functions/_findIndex.html" target="_blank" rel="noopener noreferrer">_findIndex</a></i>
+              <li class="sidebar-item"><a href="functions/_findIndex.html" target="_blank" rel="noopener noreferrer">_findIndex</a></li>
               <li class="sidebar-item"><a href="functions/_lastIndexOf.html" target="_blank" rel="noopener noreferrer">_lastIndexOf</a></li>
               <li class="sidebar-item"><a href="functions/_concat.html" target="_blank" rel="noopener noreferrer">_concat</a></li>
               <li class="sidebar-item"><a href="functions/_isEqual.html" target="_blank" rel="noopener noreferrer">_isEqual</a></li>
