Cierra tag <a> en footer

--- a/index.html
+++ b/index.html
@@ -28,49 +28,54 @@
       <div class="container">
         <aside class="sidebar">
           <h3>Métodos</h3>
-            <ul>
-              <li class="sidebar-item"><a href="functions/_forEach.html" target="_blank" rel="noopener noreferrer">_forEach</a></li>
-              <li class="sidebar-item"><a href="functions/_some.html" target="_blank" rel="noopener noreferrer">_some</a></li>
-              <li class="sidebar-item"><a href="functions/_every.html" target="_blank" rel="noopener noreferrer">_every</a></li>
-              <li class="sidebar-item"><a href="functions/_find.html" target="_blank" rel="noopener noreferrer">_find</a></li>
-              <li class="sidebar-item"><a href="functions/_includes" target="_blank" rel="noopener noreferrer">_includes</a></li>
-              <li class="sidebar-item"><a href="functions/_map.html" target="_blank" rel="noopener noreferrer">_map</a></li>
-              <li class="sidebar-item"><a href="functions/_filter.html" target="_blank" rel="noopener noreferrer">_filter</a></li>
-              <li class="sidebar-item"><a href="functions/_reduce.html" target="_blank" rel="noopener noreferrer">_reduce</a></li>
-              <li class="sidebar-item"><a href="functions/_indexOf.html" target="_blank" rel="noopener noreferrer">_indexOf</a></li>
-              <li class="sidebar-item"><a href="functions/_indexOfRecursive.html" target="_blank" rel="noopener noreferrer">_indexOfRecursive</a></li>
-              <li class="sidebar-item"><a href="functions/_intersection.html" target="_blank" rel="noopener noreferrer">_intersection</a></li>
-              <li class="sidebar-item"><a href="functions/_union.html" target="_blank" rel="noopener noreferrer">_union</a></li>
-              <li class="sidebar-item"><a href="functions/_sum.html" target="_blank" rel="noopener noreferrer">_sum</a></li>
-              <li class="sidebar-item"><a href="functions/_min.html" target="_blank" rel="noopener noreferrer">_min</a></li>
-              <li class="sidebar-item"><a href="functions/_max.html" target="_blank" rel="noopener noreferrer">_max</a></li>
-              <li class="sidebar-item"><a href="functions/_findIndex.html" target="_blank" rel="noopener noreferrer">_findIndex</a></li>
-              <li class="sidebar-item"><a href="functions/_lastIndexOf.html" target="_blank" rel="noopener noreferrer">_lastIndexOf</a></li>
-              <li class="sidebar-item"><a href="functions/_concat.html" target="_blank" rel="noopener noreferrer">_concat</a></li>
-              <li class="sidebar-item"><a href="functions/_isEqual.html" target="_blank" rel="noopener noreferrer">_isEqual</a></li>
-            </ul>
+          <ul>
+            <li class="sidebar-item"><a href="functions/_forEach.html" target="_blank" rel="noopener noreferrer">_forEach</a></li>
+            <li class="sidebar-item"><a href="functions/_some.html" target="_blank" rel="noopener noreferrer">_some</a></li>
+            <li class="sidebar-item"><a href="functions/_every.html" target="_blank" rel="noopener noreferrer">_every</a></li>
+            <li class="sidebar-item"><a href="functions/_find.html" target="_blank" rel="noopener noreferrer">_find</a></li>
+            <li class="sidebar-item"><a href="functions/_includes" target="_blank" rel="noopener noreferrer">_includes</a></li>
+            <li class="sidebar-item"><a href="functions/_map.html" target="_blank" rel="noopener noreferrer">_map</a></li>
+            <li class="sidebar-item"><a href="functions/_filter.html" target="_blank" rel="noopener noreferrer">_filter</a></li>
+            <li class="sidebar-item"><a href="functions/_reduce.html" target="_blank" rel="noopener noreferrer">_reduce</a></li>
+            <li class="sidebar-item"><a href="functions/_indexOf.html" target="_blank" rel="noopener noreferrer">_indexOf</a></li>
+            <li class="sidebar-item">
+              <a href="functions/_indexOfRecursive.html" target="_blank" rel="noopener noreferrer">_indexOfRecursive</a>
+            </li>
+            <li class="sidebar-item">
+              <a href="functions/_intersection.html" target="_blank" rel="noopener noreferrer">_intersection</a>
+            </li>
+            <li class="sidebar-item"><a href="functions/_union.html" target="_blank" rel="noopener noreferrer">_union</a></li>
+            <li class="sidebar-item"><a href="functions/_sum.html" target="_blank" rel="noopener noreferrer">_sum</a></li>
+            <li class="sidebar-item"><a href="functions/_min.html" target="_blank" rel="noopener noreferrer">_min</a></li>
+            <li class="sidebar-item"><a href="functions/_max.html" target="_blank" rel="noopener noreferrer">_max</a></li>
+            <li class="sidebar-item">
+              <a href="functions/_findIndex.html" target="_blank" rel="noopener noreferrer">_findIndex</a>
+            </li>
+            <li class="sidebar-item">
+              <a href="functions/_lastIndexOf.html" target="_blank" rel="noopener noreferrer">_lastIndexOf</a>
+            </li>
+            <li class="sidebar-item"><a href="functions/_concat.html" target="_blank" rel="noopener noreferrer">_concat</a></li>
+            <li class="sidebar-item"><a href="functions/_isEqual.html" target="_blank" rel="noopener noreferrer">_isEqual</a></li>
+          </ul>
         </aside>
         <section class="content">
           <p>
-            JavaScript (JS) is a lightweight interpreted or just-in-time compiled programming language
-            with first-class functions. While it is most well-known as the scripting language for Web
-            pages, many non-browser environments also use it, such as Node.js, Apache CouchDB and
-            Adobe Acrobat. JavaScript is a prototype-based, multi-paradigm, dynamic language,
-            supporting object-oriented, imperative, and declarative (e.g. functional programming)
-            styles. Read more about JavaScript.
+            JavaScript (JS) is a lightweight interpreted or just-in-time compiled programming language with first-class functions.
+            While it is most well-known as the scripting language for Web pages, many non-browser environments also use it, such
+            as Node.js, Apache CouchDB and Adobe Acrobat. JavaScript is a prototype-based, multi-paradigm, dynamic language,
+            supporting object-oriented, imperative, and declarative (e.g. functional programming) styles. Read more about
+            JavaScript.
           </p>
           <p>
-            This section is dedicated to the JavaScript language itself, and not the parts that are
-            specific to Web pages or other host environments. For information about APIs specific to
-            Web pages, please see Web APIs and DOM.
+            This section is dedicated to the JavaScript language itself, and not the parts that are specific to Web pages or other
+            host environments. For information about APIs specific to Web pages, please see Web APIs and DOM.
           </p>
           <p>
-            The standard for JavaScript is ECMAScript. As of 2012, all modern browsers fully support
-            ECMAScript 5.1. Older browsers support at least ECMAScript 3. On June 17, 2015, ECMA
-            International published the sixth major version of ECMAScript, which is officially called
-            ECMAScript 2015, and was initially referred to as ECMAScript 6 or ES6. Since then,
-            ECMAScript standards are on yearly release cycles. This documentation refers to the latest
-            draft version, which is currently ECMAScript 2020.
+            The standard for JavaScript is ECMAScript. As of 2012, all modern browsers fully support ECMAScript 5.1. Older
+            browsers support at least ECMAScript 3. On June 17, 2015, ECMA International published the sixth major version of
+            ECMAScript, which is officially called ECMAScript 2015, and was initially referred to as ECMAScript 6 or ES6. Since
+            then, ECMAScript standards are on yearly release cycles. This documentation refers to the latest draft version, which
+            is currently ECMAScript 2020.
           </p>
         </section>
       </div>
@@ -79,6 +84,7 @@
       <section>
         <a class="logo" href="#">
           <img src="img/logo_v2_blanco.png" alt="Logo fakeMdn" title="Logo" />
+        </a>
       </section>
     </footer>
   </body>
